refactored literal strings in XmlParseHeleprTable added empty test class for testing Entity added docs folder to gitignore

--- a/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj.filters
@@ -47,6 +47,7 @@
     <ClCompile Include="GraphTest.cpp" />
     <ClCompile Include="XmlParseHelperTest.cpp" />
     <ClCompile Include="FactoryTest.cpp" />
+    <ClCompile Include="EntityTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
