--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -42,6 +42,8 @@
     <ClInclude Include="XmlParseHelperNameValue.h">
       <Filter>XmlParseHelpers</Filter>
     </ClInclude>
+    <ClInclude Include="GameClock.h" />
+    <ClInclude Include="GameTime.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -69,6 +71,8 @@
     <ClCompile Include="XmlParseHelperNameValue.cpp">
       <Filter>XmlParseHelpers</Filter>
     </ClCompile>
+    <ClCompile Include="GameClock.cpp" />
+    <ClCompile Include="GameTime.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Vector.inl">
