--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -99,6 +99,10 @@
     <ClInclude Include="ActionExpression.h">
       <Filter>Kernel\Actions</Filter>
     </ClInclude>
+    <ClInclude Include="ActionCreateAction.h" />
+    <ClInclude Include="XmlParseHelperActionCreate.h">
+      <Filter>XmlParseHelpers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -180,6 +184,10 @@
     </ClCompile>
     <ClCompile Include="ActionExpression.cpp">
       <Filter>Kernel\Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="ActionCreateAction.cpp" />
+    <ClCompile Include="XmlParseHelperActionCreate.cpp">
+      <Filter>XmlParseHelpers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
