--- a/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/NihavGameEngine/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -112,7 +112,9 @@
     <ClInclude Include="Event.h">
       <Filter>Event</Filter>
     </ClInclude>
-    <ClInclude Include="EventQueue.h" />
+    <ClInclude Include="EventQueue.h">
+      <Filter>Event</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -202,7 +204,9 @@
     <ClCompile Include="EventPublisher.cpp">
       <Filter>Event</Filter>
     </ClCompile>
-    <ClCompile Include="EventQueue.cpp" />
+    <ClCompile Include="EventQueue.cpp">
+      <Filter>Event</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Vector.inl">
