--- a/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj
+++ b/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj
@@ -216,6 +216,7 @@
     <ClInclude Include="AttributedNative.h" />
     <ClInclude Include="Foo.h" />
     <ClInclude Include="FooRTTI.h" />
+    <ClInclude Include="FooSubscriber.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="TestSharedData.h" />
     <ClInclude Include="XmlParseHelper.h" />
@@ -233,9 +234,11 @@
     <ClCompile Include="AttributedTest.cpp" />
     <ClCompile Include="DatumTest.cpp" />
     <ClCompile Include="EntityTest.cpp" />
+    <ClCompile Include="EventTest.cpp" />
     <ClCompile Include="FactoryTest.cpp" />
     <ClCompile Include="Foo.cpp" />
     <ClCompile Include="FooRTTI.cpp" />
+    <ClCompile Include="FooSubscriber.cpp" />
     <ClCompile Include="GraphTest.cpp" />
     <ClCompile Include="HashmapTest.cpp" />
     <ClCompile Include="pch.cpp">
