--- a/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj
+++ b/NihavGameEngine/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj
@@ -214,6 +214,8 @@
     <ClInclude Include="AttributedFooChild.h" />
     <ClInclude Include="AttributedInternalError.h" />
     <ClInclude Include="AttributedNative.h" />
+    <ClInclude Include="Bar.h" />
+    <ClInclude Include="BarSubscriber.h" />
     <ClInclude Include="Foo.h" />
     <ClInclude Include="FooRTTI.h" />
     <ClInclude Include="FooSubscriber.h" />
@@ -232,6 +234,8 @@
     <ClCompile Include="AttributedInternalError.cpp" />
     <ClCompile Include="AttributedNative.cpp" />
     <ClCompile Include="AttributedTest.cpp" />
+    <ClCompile Include="Bar.cpp" />
+    <ClCompile Include="BarSubscriber.cpp" />
     <ClCompile Include="DatumTest.cpp" />
     <ClCompile Include="EntityTest.cpp" />
     <ClCompile Include="EventTest.cpp" />
